--- a/OctopusHelpers/OctopusHelpers.csproj
+++ b/OctopusHelpers/OctopusHelpers.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Enums\InterruptionResponse.cs" />
     <Compile Include="Enums\TaskManagerStatus.cs" />
     <Compile Include="InterruptionHelper.cs" />
+    <Compile Include="LifecycleHelper.cs" />
     <Compile Include="Models\OctopusDeploymentTaskManager.cs" />
     <Compile Include="Models\QueuedBehindTaskResource.cs" />
     <Compile Include="StepHelper.cs" />
