--- a/OctopusHelpers/OctopusHelpers.csproj
+++ b/OctopusHelpers/OctopusHelpers.csproj
@@ -23,7 +23,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\OctopusHelpers.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,7 +33,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\OctopusHelpers.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
@@ -94,19 +96,9 @@
   <PropertyGroup>
     <PostBuildEvent>IF "$(ConfigurationName)" == "Release" (
 del *.nupkg
-nuget pack $(ProjectPath) -properties Configuration=$(ConfigurationName) -output $(SolutionDir)\$(OutDir)
-
-$(SolutionDir)\packages\PxtlCa.XmlCommentMarkDownGenerator.0.2.6130.564\tools\PxtlCa.XmlCommentMarkDownGenerator.exe -i $(SolutionDir)\$(OutDir)\$(TargetName).xml -o $(SolutionDir)\$(OutDir)\$(TargetName).md
-)
-</PostBuildEvent>
+nuget pack $(ProjectPath) -properties Configuration=$(ConfigurationName) -output $(SolutionDir)$(OutDir)
+)</PostBuildEvent>
   </PropertyGroup>
-  <Import Project="packages\PxtlCa.XmlCommentMarkDownGenerator.0.2.6130.564\build\PxtlCa.XmlCommentMarkDownGenerator.targets" Condition="Exists('packages\PxtlCa.XmlCommentMarkDownGenerator.0.2.6130.564\build\PxtlCa.XmlCommentMarkDownGenerator.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('packages\PxtlCa.XmlCommentMarkDownGenerator.0.2.6130.564\build\PxtlCa.XmlCommentMarkDownGenerator.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\PxtlCa.XmlCommentMarkDownGenerator.0.2.6130.564\build\PxtlCa.XmlCommentMarkDownGenerator.targets'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
