--- a/OctopusHelpers/OctopusHelpers.csproj
+++ b/OctopusHelpers/OctopusHelpers.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActivityElementHelper.cs" />
     <Compile Include="DeploymentHelper.cs" />
     <Compile Include="Enums\CancellationStatus.cs" />
     <Compile Include="Enums\ErrorStatus.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="LifcecycleHelper.cs" />
     <Compile Include="Models\OctopusDeploymentTaskManager.cs" />
     <Compile Include="StepHelper.cs" />
+    <Compile Include="TaskHelper.cs" />
     <Compile Include="TeamHelper.cs" />
     <Compile Include="VariableHelper.cs" />
     <Compile Include="UserHelper.cs" />
