--- a/OctopusHelpers/OctopusHelpers.csproj
+++ b/OctopusHelpers/OctopusHelpers.csproj
@@ -44,8 +44,8 @@
       <HintPath>packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Octopus.Client, Version=4.13.10.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Octopus.Client.4.13.10\lib\net45\Octopus.Client.dll</HintPath>
+    <Reference Include="Octopus.Client, Version=4.13.14.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Octopus.Client.4.13.14\lib\net45\Octopus.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionTemplateHelper.cs" />
     <Compile Include="ActivityElementHelper.cs" />
     <Compile Include="DeploymentHelper.cs" />
     <Compile Include="Enums\CancellationStatus.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="ProjectHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReleaseHelper.cs" />
+    <Compile Include="VariableRegExHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
