--- a/OctopusHelpers/OctopusHelpers.csproj
+++ b/OctopusHelpers/OctopusHelpers.csproj
@@ -73,10 +73,11 @@
     <Compile Include="LifcecycleHelper.cs" />
     <Compile Include="MachineHelper.cs" />
     <Compile Include="Models\OctopusDeploymentTaskManager.cs" />
+    <Compile Include="Models\VariableInfoResource.cs" />
     <Compile Include="StepHelper.cs" />
     <Compile Include="TaskHelper.cs" />
     <Compile Include="TeamHelper.cs" />
-    <Compile Include="VariableHelper.cs" />
+    <Compile Include="VariableSetHelper.cs" />
     <Compile Include="UserHelper.cs" />
     <Compile Include="Constants\ErrorStrings.cs" />
     <Compile Include="Constants\ResourceStrings.cs" />
