--- a/OctopusHelpers/OctopusHelpers.nuspec
+++ b/OctopusHelpers/OctopusHelpers.nuspec
@@ -9,7 +9,7 @@
     <projectUrl>https://github.com/ChadRoesler/OctopusHelpers</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Addition for gathering Deployments and Projects by Task, and Update to Octopus Clients.</releaseNotes>
+    <releaseNotes>Alteration for handling the depreciation of Deployments.FindAll.</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>Octopus</tags>
   </metadata>
