--- a/OctopusHelpers/OctopusHelpers.csproj
+++ b/OctopusHelpers/OctopusHelpers.csproj
@@ -44,9 +44,8 @@
       <HintPath>packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Octopus.Client, Version=4.22.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Octopus.Client.4.22.1\lib\net45\Octopus.Client.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Octopus.Client, Version=4.25.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Octopus.Client.4.25.0\lib\net45\Octopus.Client.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -63,6 +62,7 @@
   <ItemGroup>
     <Compile Include="ActionTemplateHelper.cs" />
     <Compile Include="ActivityElementHelper.cs" />
+    <Compile Include="ChannelHelper.cs" />
     <Compile Include="DeploymentHelper.cs" />
     <Compile Include="Enums\CancellationStatus.cs" />
     <Compile Include="Enums\ErrorStatus.cs" />
