--- a/OctopusHelpers/OctopusHelpers.nuspec
+++ b/OctopusHelpers/OctopusHelpers.nuspec
@@ -9,8 +9,8 @@
     <projectUrl>https://github.com/ChadRoesler/OctopusHelpers</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Addition of Comment adding for deployments</releaseNotes>
-    <copyright>Copyright 2016</copyright>
+    <releaseNotes>Adding Channel Stuff, its about time</releaseNotes>
+    <copyright>Copyright 2017</copyright>
     <tags>Octopus</tags>
   </metadata>
 </package>
