Hey kid, wanna get some deployments
Back alley deployment gathering.

--- a/OctopusHelpers/OctopusHelpers.nuspec
+++ b/OctopusHelpers/OctopusHelpers.nuspec
@@ -9,7 +9,7 @@
     <projectUrl>https://github.com/ChadRoesler/OctopusHelpers</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Adding Channel Stuff, its about time</releaseNotes>
+    <releaseNotes>Hey kid, wanna get some deployments.</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>Octopus</tags>
   </metadata>
