Rise of the MachineResources
Gather more and buld machine resources.

--- a/OctopusHelpers/OctopusHelpers.csproj
+++ b/OctopusHelpers/OctopusHelpers.csproj
@@ -72,6 +72,7 @@
     <Compile Include="InterruptionHelper.cs" />
     <Compile Include="LifcecycleHelper.cs" />
     <Compile Include="MachineHelper.cs" />
+    <Compile Include="MachinePolicyHelper.cs" />
     <Compile Include="Models\OctopusDeploymentTaskManager.cs" />
     <Compile Include="Models\VariableInfoResource.cs" />
     <Compile Include="StepHelper.cs" />
