--- a/OctopusHelpers/OctopusHelpers.nuspec
+++ b/OctopusHelpers/OctopusHelpers.nuspec
@@ -9,7 +9,7 @@
     <projectUrl>https://github.com/ChadRoesler/OctopusHelpers</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Addition of a Base BuildDeployment.</releaseNotes>
+    <releaseNotes>.net Updates and client updates.</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>Octopus</tags>
   </metadata>
