--- a/OctopusHelpers/packages.config
+++ b/OctopusHelpers/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
-  <package id="Octopus.Client" version="4.30.6" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="Octopus.Client" version="4.37.0" targetFramework="net452" />
+  <package id="Semver" version="2.0.4" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
 </packages>
