--- a/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.csproj
+++ b/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.csproj
@@ -39,11 +39,14 @@
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Octopus.Client, Version=4.39.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Octopus.Client.4.39.4\lib\net45\Octopus.Client.dll</HintPath>
+    <Reference Include="Octodiff, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Octodiff.1.2.1\lib\net40\Octodiff.exe</HintPath>
+    </Reference>
+    <Reference Include="Octopus.Client, Version=4.46.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Octopus.Client.4.46.0\lib\net45\Octopus.Client.dll</HintPath>
     </Reference>
     <Reference Include="Semver, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Semver.2.0.4\lib\net452\Semver.dll</HintPath>
@@ -101,7 +104,13 @@
     <None Include="OctopusHelpers.nuspec">
       <SubType>Designer</SubType>
     </None>
+    <None Include="PowerShell\OctopusHelpers.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
+    <None Include="PowerShell\OctopusHelpers.psd1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
