--- a/OctopusHelpers/src/OctopusHelpers/packages.config
+++ b/OctopusHelpers/src/OctopusHelpers/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
-  <package id="Octopus.Client" version="4.39.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
+  <package id="Octodiff" version="1.2.1" targetFramework="net452" />
+  <package id="Octopus.Client" version="4.46.0" targetFramework="net452" />
   <package id="Semver" version="2.0.4" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net452" />
 </packages>
