Manual Interventions are a go! ~mostly
Deployment Task Manager Changes to handle manual interventions, we cant get the instruction text just yet though.
Also we are not currently using them for response yet, we could use something like a check for responsible users, though that will be at a later day.

--- a/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.csproj
+++ b/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Enums\CancellationStatus.cs" />
     <Compile Include="Enums\ErrorStatus.cs" />
     <Compile Include="Enums\InterruptionResponse.cs" />
+    <Compile Include="Enums\InterventionResponse.cs" />
     <Compile Include="Enums\TaskManagerStatus.cs" />
     <Compile Include="EventHelper.cs" />
     <Compile Include="InterruptionHelper.cs" />
