--- a/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.nuspec
+++ b/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.nuspec
@@ -9,7 +9,7 @@
     <projectUrl>https://github.com/ChadRoesler/OctopusHelpers</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Ignore the last one, now we allow Octopus's SemanticVersion models as well.</releaseNotes>
+    <releaseNotes>Deployment Task Manager Changes to handle manual interventions, we cant get the instruction text just yet though.</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>Octopus</tags>
   </metadata>
