--- a/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.csproj
+++ b/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.csproj
@@ -45,8 +45,8 @@
     <Reference Include="Octodiff, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Octodiff.1.2.1\lib\net40\Octodiff.exe</HintPath>
     </Reference>
-    <Reference Include="Octopus.Client, Version=5.2.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\..\Users\CaesarV\source\repos\OctopusDeploymentManagerPlus\OctopusDeploymentManager\packages\Octopus.Client.5.2.2\lib\net45\Octopus.Client.dll</HintPath>
+    <Reference Include="Octopus.Client, Version=4.47.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Octopus.Client.4.47.0\lib\net45\Octopus.Client.dll</HintPath>
     </Reference>
     <Reference Include="Semver, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Semver.2.0.4\lib\net452\Semver.dll</HintPath>
