--- a/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.nuspec
+++ b/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.nuspec
@@ -9,7 +9,7 @@
     <projectUrl>https://github.com/ChadRoesler/OctopusHelpers</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Interruption changes, directly gather step and instructions.</releaseNotes>
+    <releaseNotes>Revert OctopusClients to pre 5.0 we are maintaining with LTS versions.</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>Octopus</tags>
   </metadata>
