--- a/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.csproj
+++ b/OctopusHelpers/src/OctopusHelpers/OctopusHelpers.csproj
@@ -1,130 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7E8AF10B-3C33-4B95-B294-2F58607ACF17}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OctopusHelpers</RootNamespace>
-    <AssemblyName>OctopusHelpers</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>2.0.0.0</Version>
+    <Description>A Glut of Tools to Assist in Automating Octopus.</Description>
+    <PackageProjectUrl>https://github.com/ChadRoesler/OctopusHelpers</PackageProjectUrl>
+    <PackageTags>Octopus OctopusDeploy</PackageTags>
+    <PackageReleaseNotes>We .net standard now boys.</PackageReleaseNotes>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>
-    </DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\OctopusHelpers.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Octodiff, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Octodiff.1.2.1\lib\net40\Octodiff.exe</HintPath>
-    </Reference>
-    <Reference Include="Octopus.Client, Version=4.47.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Octopus.Client.4.47.0\lib\net45\Octopus.Client.dll</HintPath>
-    </Reference>
-    <Reference Include="Semver, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Semver.2.0.4\lib\net452\Semver.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Runtime.Caching" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Octopus.Client" Version="6.7.1" />
+    <PackageReference Include="Semver" Version="2.0.4" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="ActionTemplateHelper.cs" />
-    <Compile Include="ActivityElementHelper.cs" />
-    <Compile Include="ChannelHelper.cs" />
-    <Compile Include="DeploymentHelper.cs" />
-    <Compile Include="Enums\CancellationStatus.cs" />
-    <Compile Include="Enums\ErrorStatus.cs" />
-    <Compile Include="Enums\InterruptionResponse.cs" />
-    <Compile Include="Enums\InterventionResponse.cs" />
-    <Compile Include="Enums\TaskManagerStatus.cs" />
-    <Compile Include="EventHelper.cs" />
-    <Compile Include="ExtensionMethods\OctopusClientExtensions.cs" />
-    <Compile Include="InterruptionHelper.cs" />
-    <Compile Include="LifcecycleHelper.cs" />
-    <Compile Include="MachineHelper.cs" />
-    <Compile Include="MachinePolicyHelper.cs" />
-    <Compile Include="Models\OctopusDeploymentTaskManager.cs" />
-    <Compile Include="Models\VariableInfoResource.cs" />
-    <Compile Include="PackageHelper.cs" />
-    <Compile Include="StepHelper.cs" />
-    <Compile Include="TaskHelper.cs" />
-    <Compile Include="TeamHelper.cs" />
-    <Compile Include="VariableSetHelper.cs" />
-    <Compile Include="UserHelper.cs" />
-    <Compile Include="Constants\ErrorStrings.cs" />
-    <Compile Include="Constants\ResourceStrings.cs" />
-    <Compile Include="DeploymentProcessHelper.cs" />
-    <Compile Include="EnvironmentHelper.cs" />
-    <Compile Include="ExtensionMethods\ReleaseResourceExtensions.cs" />
-    <Compile Include="LibraryVariableSetHelper.cs" />
-    <Compile Include="MaintanenceConfigurationHelper.cs" />
-    <Compile Include="ProjectGroupHelper.cs" />
-    <Compile Include="ProjectHelper.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReleaseHelper.cs" />
-    <Compile Include="VariableRegExHelper.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="OctopusHelpers.nuspec">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="PowerShell\OctopusHelpers.ps1">
+    <None Update="PowerShell\OctopusHelpers.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="packages.config" />
-    <None Include="PowerShell\OctopusHelpers.psd1">
+    <None Update="PowerShell\OctopusHelpers.psd1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>IF "$(ConfigurationName)" == "Release" (
-del *.nupkg
-nuget pack $(ProjectPath) -properties Configuration=$(ConfigurationName) -outputdirectory $(TargetDir)
-)</PostBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
